--- a/index.html
+++ b/index.html
@@ -1,27 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stream</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="main.css" />
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-
-</head>
-<body>
-    <video id="video" width="100%" height="auto" controls autoplay 
-    class="videoCentered"></video>
+  </head>
+  <body>
+    <video
+      id="video"
+      width="100%"
+      height="auto"
+      controls
+      autoplay
+      class="videoCentered"
+    ></video>
     <script>
-    if(Hls.isSupported()) {
-    var video = document.getElementById('video');
-    var hls = new Hls();
-    hls.loadSource('https://mcdn.daserste.de/daserste/de/master.m3u8');
-    hls.attachMedia(video);
-    hls.on(Hls.Events.MANIFEST_PARSED,function() {
-      video.play();
-    });
-    }
+      if (Hls.isSupported()) {
+        var video = document.getElementById("video");
+        var hls = new Hls();
+        hls.loadSource("https://mcdn.daserste.de/daserste/de/master.m3u8");
+        hls.attachMedia(video);
+        hls.on(Hls.Events.MANIFEST_PARSED, function () {
+          video.play();
+        });
+      }
+      // HLS.js is not supported on platforms that do not have Media Source
+      // Extensions (MSE) enabled.
+      //
+      // When the browser has built-in HLS support (check using `canPlayType`),
+      // we can provide an HLS manifest (i.e. .m3u8 URL) directly to the video
+      // element through the `src` property. This is using the built-in support
+      // of the plain video element, without using HLS.js.
+      //
+      // Note: it would be more normal to wait on the 'canplay' event below however
+      // on Safari (where you are most likely to find built-in HLS support) the
+      // video.src URL must be on the user-driven white-list before a 'canplay'
+      // event will be emitted; the last video event that can be reliably
+      // listened-for when the URL is not on the white-list is 'loadedmetadata'.
+      else if (video.canPlayType("application/vnd.apple.mpegurl")) {
+        video.src = videoSrc;
+      }
     </script>
-</body>
+  </body>
 </html>
