--- a/index.html
+++ b/index.html
@@ -18,30 +18,21 @@
       class="videoCentered"
     ></video>
     <script>
-      if (Hls.isSupported()) {
-        var video = document.getElementById("video");
-        var hls = new Hls();
-        hls.loadSource("https://mcdn.daserste.de/daserste/de/master.m3u8");
-        hls.attachMedia(video);
-        hls.on(Hls.Events.MANIFEST_PARSED, function () {
-          video.play();
-        });
-      }
-      // HLS.js is not supported on platforms that do not have Media Source
-      // Extensions (MSE) enabled.
+
+      var video = document.getElementById('video');
+      var videoSrc = 'https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8';
       //
-      // When the browser has built-in HLS support (check using `canPlayType`),
-      // we can provide an HLS manifest (i.e. .m3u8 URL) directly to the video
-      // element through the `src` property. This is using the built-in support
-      // of the plain video element, without using HLS.js.
+      // First check for native browser HLS support
       //
-      // Note: it would be more normal to wait on the 'canplay' event below however
-      // on Safari (where you are most likely to find built-in HLS support) the
-      // video.src URL must be on the user-driven white-list before a 'canplay'
-      // event will be emitted; the last video event that can be reliably
-      // listened-for when the URL is not on the white-list is 'loadedmetadata'.
-      else if (video.canPlayType("application/vnd.apple.mpegurl")) {
+      if (video.canPlayType('https://mcdn.daserste.de/daserste/de/master.m3u8')) {
         video.src = videoSrc;
+        //
+        // If no native HLS support, check if HLS.js is supported
+        //
+      } else if (Hls.isSupported()) {
+        var hls = new Hls();
+        hls.loadSource(videoSrc);
+        hls.attachMedia(video);
       }
     </script>
   </body>
