--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
       class="videoCentered"
     ></video>
     <script>
-
       var video = document.getElementById('video');
-      var videoSrc = 'https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8';
+      var videoSrc = 'https://mcdn.daserste.de/daserste/de/master.m3u8';
       //
       // First check for native browser HLS support
       //
-      if (video.canPlayType('https://mcdn.daserste.de/daserste/de/master.m3u8')) {
+      if (video.canPlayType('application/vnd.apple.mpegurl')) {
         video.src = videoSrc;
         //
         // If no native HLS support, check if HLS.js is supported
@@ -33,7 +32,7 @@
         var hls = new Hls();
         hls.loadSource(videoSrc);
         hls.attachMedia(video);
-      }
+      }      
     </script>
   </body>
 </html>
