--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <video
       id="video"
       width="100%"
-      height="auto"
+      height="100%"
       controls
       autoplay
       class="videoCentered"
