--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   </head>
   <body>
-    <video
-      id="video"
-      width="100%"
-      height="100%"
-      controls
-      autoplay
-      class="videoCentered"
-    ></video>
+    <video id="video"></video>
     <script>
       var video = document.getElementById('video');
       var videoSrc = 'https://mcdn.daserste.de/daserste/de/master.m3u8';
