--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     class="videoCentered"></video>
     <script>
       var video = document.getElementById('video');
-      var videoSrc = 'https://mcdn.daserste.de/daserste/de/master.m3u8';
+      var videoSrc = 'https://dtad8g68w4qd5.cloudfront.net/out/v1/6a6b40ae589249ceaa999c7cfcf116e9/dgb-live.m3u8';
       //
       // First check for native browser HLS support
       //
