--- a/dgb.html
+++ b/dgb.html
@@ -12,7 +12,7 @@
     <video id="video" width="100%"
     height="100%"
     controls
-    poster="https://niedersachsen.dgb.de/++co++4f141f98-1239-11ed-bc89-001a4a160123/teaserimage/scaled/size/720"></video>
+    poster="/pix/DGB.svg"></video>
     <script>
       var video = document.getElementById('video');
       var videoSrc = 'https://dtad8g68w4qd5.cloudfront.net/out/v1/6a6b40ae589249ceaa999c7cfcf116e9/dgb-live.m3u8';
